// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`BaseMissionScriptingFilesManager rebuild writes the before/after sanitize mission scripting files (snapshot): before sanitize mission scripting file 1`] = `
"-- MISSION_START_BEFORE_SANITIZE
-- This file is automatically generated by DCS DROPZONE
-- Do not edit this file manually as it will be overwritten

function dofileifexist(filePath)
    local file = io.open(filePath, "r")
    if file then
        env.info("[dcs-dropzone] - Running dofile: " .. filePath)
        file:close()
        dofile(filePath)
    else
        env.warning("[dcs-dropzone] - Attempted to dofile but file was not found: " .. filePath)
    end
end

-- ## Start of Scripts ##
-- modA-1.0.0
dofileifexist([[/DCS_INSTALL_DIR/Mods/modA/Scripts/a.lua]])

-- modB-2.0.0
dofileifexist([[/DCS_WORKING_DIR/SavedGames/modB/Scripts/b.lua]])
-- ## End of Scripts ##
"
`;

exports[`BaseMissionScriptingFilesManager rebuild writes the before/after sanitize mission scripting files (snapshot): after sanitize mission scripting file 1`] = `
"-- MISSION_START_AFTER_SANITIZE
-- This file is automatically generated by DCS DROPZONE
-- Do not edit this file manually as it will be overwritten

function dofileifexist(filePath)
    local file = io.open(filePath, "r")
    if file then
        env.info("[dcs-dropzone] - Running dofile: " .. filePath)
        file:close()
        dofile(filePath)
    else
        env.warning("[dcs-dropzone] - Attempted to dofile but file was not found: " .. filePath)
    end
end

-- ## Start of Scripts ##
-- modC-3.0.0
dofileifexist([[/DCS_INSTALL_DIR/Mods/modC/Scripts/c.lua]])
-- ## End of Scripts ##
"
`;

exports[`BaseMissionScriptingFilesManager rebuild should create empty mission scripting files when there are no scripts: before sanitize mission scripting file 1`] = `
"-- MISSION_START_BEFORE_SANITIZE
-- This file is automatically generated by DCS DROPZONE
-- Do not edit this file manually as it will be overwritten

function dofileifexist(filePath)
    local file = io.open(filePath, "r")
    if file then
        env.info("[dcs-dropzone] - Running dofile: " .. filePath)
        file:close()
        dofile(filePath)
    else
        env.warning("[dcs-dropzone] - Attempted to dofile but file was not found: " .. filePath)
    end
end

-- ## Start of Scripts ##
-- ## End of Scripts ##
"
`;

exports[`BaseMissionScriptingFilesManager rebuild should create empty mission scripting files when there are no scripts: after sanitize mission scripting file 1`] = `
"-- MISSION_START_AFTER_SANITIZE
-- This file is automatically generated by DCS DROPZONE
-- Do not edit this file manually as it will be overwritten

function dofileifexist(filePath)
    local file = io.open(filePath, "r")
    if file then
        env.info("[dcs-dropzone] - Running dofile: " .. filePath)
        file:close()
        dofile(filePath)
    else
        env.warning("[dcs-dropzone] - Attempted to dofile but file was not found: " .. filePath)
    end
end

-- ## Start of Scripts ##
-- ## End of Scripts ##
"
`;
